# read_version

./: .travis.yml  CHANGELOG.md  README.rst  read_version.py  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
src/: read_version.py
test/: test_read_version.py  test_setuptools_finalizer.py
test/data/docstrings/: adjstrings.py  nodoc.py  onestring.py  overridden.py  twostrings.py
test/data/invalid/: expression.py  overwrite1.py  overwrite2.py  varassign1.py  varassign2.py
test/data/missing/: imported.py  in_block.py
test/data/missing_custom/: imported.py  in_block.py
test/data/projects/all-attribs/: pyproject.toml
test/data/projects/all-attribs-ep/: foobar.py  pyproject.toml  setup.py
test/data/projects/all-attribs-overwrite/: foobar.py  pyproject.toml  setup.py
test/data/projects/altvariable/: foobar.py  pyproject.toml
test/data/projects/badspec01/: pyproject.toml
test/data/projects/badspec02/: foobar.py  pyproject.toml
test/data/projects/badspec03/: pyproject.toml
test/data/projects/badtype/: pyproject.toml  setup.py
test/data/projects/epstring/: pyproject.toml
test/data/projects/epstring-dotted/: pyproject.toml  setup.py
test/data/projects/epstring-dotted/foobar/: __init__.py
test/data/projects/inline-table/: foobar.py  pyproject.toml
test/data/projects/list-path/: pyproject.toml  setup.py
test/data/projects/list-path/foobar/: __init__.py
test/data/projects/missing/: foobar.py  pyproject.toml
test/data/projects/missing-default/: pyproject.toml
test/data/projects/no-pyproject/: foobar.py  setup.py
test/data/projects/nopath/: pyproject.toml
test/data/projects/nottable/: pyproject.toml
test/data/projects/novariable/: pyproject.toml
test/data/projects/present-default/: foobar.py  pyproject.toml
test/data/projects/slash-path/: pyproject.toml
test/data/projects/slash-path/foobar/: __init__.py
test/data/projects/str-path/: pyproject.toml  setup.py
test/data/projects/unkfield/: pyproject.toml
test/data/valid/: adjacent_strs.py  continued_strs.py  first_chained.py  invalid_other.py  last_chained.py  latin1.py  mid_chained.py  name_tuple.py  overwrite.py  parenth_strs.py  simple.py  skip_tuple_expr.py  subscript_changed.py  subscript_in_tuple.py  tuple.py  tuple_name.py  tuple_repeat.py  utf8.py
