[aliases]
make = sdist bdist_wheel

[bdist_wheel]
universal = 1

[metadata]
name = read_version
#version = # Set in setup.py
description = Extract your project's __version__ variable
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = read-version@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/jwodder/read_version

keywords =
    packaging
    setuptools
    version

classifiers =
    Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    Framework :: Setuptools Plugin
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Software Distribution

project_urls =
    Source Code = https://github.com/jwodder/read_version
    Bug Tracker = https://github.com/jwodder/read_version/issues
    Say Thanks! = https://saythanks.io/to/jwodder

[options]
py_modules = read_version
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, <4
install_requires =

[options.extras_require]
toml =
    toml

[options.entry_points]
setuptools.finalize_distribution_options =
    read_version = read_version:setuptools_finalizer
