[build-system]
requires = [
    "read_version ~= 0.2.0",
    "setuptools >= 42.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.read_version]
version = "foobar:__version__"
author = "foobar:__author__"
author_email = "foobar:__author_email__"
description = "foobar:__description__"
keywords = "foobar:__keywords__"
license = "foobar:__license__"
maintainer = "foobar:__maintainer__"
maintainer_email = "foobar:__maintainer_email__"
url = "foobar:__url__"
